Página Design - Sessão estudo: Why Designer and Developer Can	 be the Same Person? - Medium | Much - Olha Bahaieva

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -693,6 +693,22 @@ Ilustração Digital</a>
         </div>
         <a class="resource-button" href="https://temporalcerebral.com.br/fontes-manuscritas-aumentam-vendas-produtos-hedonicos/?fbclid=IwAR0q7z28beFcJwOFIt3ljNaTCcfBRfedFKQMLl1O9tcCDhFPM7TkFba04hU" target="_blank" id="professores">Veja</a>       
       </li>
+    
+      <li>
+        <div class="resource-icon">
+          <a href="https://medium.muz.li/why-designer-and-developer-can-t-be-the-same-person-98243432a9a3" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://medium.muz.li/why-designer-and-developer-can-t-be-the-same-person-98243432a9a3" target="_blank"> 
+              Why Designer and Developer Can`t be the Same Person?</a>
+          </h2>
+          <p>TMuch - Olha Bahaieva</p>
+        </div>
+        <a class="resource-button" href="https://medium.muz.li/why-designer-and-developer-can-t-be-the-same-person-98243432a9a3" target="_blank" id="professores">Veja</a>       
+      </li>
 
       <div class="linha"></div>
       <h2 class="margen-titulo color-frontend">Professores</h2>
