--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -705,7 +705,7 @@ Ilustração Digital</a>
             <a href="https://medium.muz.li/why-designer-and-developer-can-t-be-the-same-person-98243432a9a3" target="_blank"> 
               Why Designer and Developer Can`t be the Same Person?</a>
           </h2>
-          <p>TMuch - Olha Bahaieva</p>
+          <p>Much - Olha Bahaieva</p>
         </div>
         <a class="resource-button" href="https://medium.muz.li/why-designer-and-developer-can-t-be-the-same-person-98243432a9a3" target="_blank" id="professores">Veja</a>       
       </li>
