Página Front End: Instalando React Native em um computador com processador AMD - Medium - Lisandra Fuganti

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1967,6 +1967,21 @@
       </li>
 
       <li>
+        <a href="https://medium.com/@lissandrafuganti/instalando-react-native-em-um-computador-com-processador-amd-7749bd8b97b3" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://medium.com/@lissandrafuganti/instalando-react-native-em-um-computador-com-processador-amd-7749bd8b97b3" target="_blank">Instalando React Native em um computador com processador AMD</a>
+          </h2>
+          <p>Medium - Lissandra Fuganti</p>
+        </div>
+        <a class="resource-button" href="https://medium.com/@lissandrafuganti/instalando-react-native-em-um-computador-com-processador-amd-7749bd8b97b3" target="_blank">Veja</a>
+      </li>
+
+      <li>
         <a href="https://free-for.dev/" target="_blank">
           <div class="resource-icon">
             <img src="../../base/images/portfolios.jpg" alt="#" />
