Sites of Interest to Designers

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1906,7 +1906,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="http://www.webyurt.com/free-website-design-tools?fbclid=IwAR3_2pzqLzO8BhzlO8LZa_uqcJhymogT76vR3OmcTvFREiNILAF6G1L--uY/" target="_blank">
-						<img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/s320x320/53321402_556033561562529_4522749881521012736_n.jpg?_nc_cat=107&_nc_sid=dbb9e7&_nc_ohc=T_PBMuaoTMcAX9UBVYN&_nc_ht=scontent.fcwb2-2.fna&_nc_tp=7&oh=0641ecbdfb9079fe9275c823516ad70e&oe=5EB040F2" alt="My Favorites" />
+						<img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/s320x320/53321402_556033561562529_4522749881521012736_n.jpg?_nc_cat=107&_nc_sid=dbb9e7&_nc_eui2=AeFvIHmutwug6ylYTrhOZQUrtLPymL92Jn20s_KYv3YmfZyB9xh47rvmWl5_b_pRmdtLTPsfttiYBx2yVZsLFyad&_nc_ohc=O8Z3DFnethYAX90o1ls&_nc_ht=scontent.fcwb2-2.fna&_nc_tp=7&oh=6311a71dbd12da874e92155eb883bc57&oe=5F0743F2" alt="My Favorites" />
 					</a>
 				</div>
 				<div class="resource-details">
@@ -1914,6 +1914,19 @@
 					<p>Web Yurt - 16 Free Web Site Design Tools</p>
 				</div>
 				<a class="resource-button" href="http://www.webyurt.com/free-website-design-tools?fbclid=IwAR3_2pzqLzO8BhzlO8LZa_uqcJhymogT76vR3OmcTvFREiNILAF6G1L--uY/" target="_blank">Veja</a>
+			</li>
+
+			<li>
+				<div class="resource-icon">
+					<a href="https://drive.google.com/file/d/1D8PAd3N6QAoDHmaXwBwdV2ZIz30vIHBx/view?fbclid=IwAR3U39fF0ylSAsXyBZ4VjkKYZb7LkgWRu4ZnmRTL9h3EENYAoNE2rh8l4QM" target="_blank">
+						<img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/s320x320/53321402_556033561562529_4522749881521012736_n.jpg?_nc_cat=107&_nc_sid=dbb9e7&_nc_ohc=T_PBMuaoTMcAX9UBVYN&_nc_ht=scontent.fcwb2-2.fna&_nc_tp=7&oh=0641ecbdfb9079fe9275c823516ad70e&oe=5EB040F2" alt="My Favorites" />
+					</a>
+				</div>
+				<div class="resource-details">
+					<h2> <a href="https://drive.google.com/file/d/1D8PAd3N6QAoDHmaXwBwdV2ZIz30vIHBx/view?fbclid=IwAR3U39fF0ylSAsXyBZ4VjkKYZb7LkgWRu4ZnmRTL9h3EENYAoNE2rh8l4QM" target="_blank">Site s of Interest to designers</a> </h2>
+					<p>Google Drive</p>
+				</div>
+				<a class="resource-button" href="https://drive.google.com/file/d/1D8PAd3N6QAoDHmaXwBwdV2ZIz30vIHBx/view?fbclid=IwAR3U39fF0ylSAsXyBZ4VjkKYZb7LkgWRu4ZnmRTL9h3EENYAoNE2rh8l4QM" target="_blank">Veja</a>
 			</li>
 
 			<div id="cursos"></div>
