--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1919,7 +1919,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://drive.google.com/file/d/1D8PAd3N6QAoDHmaXwBwdV2ZIz30vIHBx/view?fbclid=IwAR3U39fF0ylSAsXyBZ4VjkKYZb7LkgWRu4ZnmRTL9h3EENYAoNE2rh8l4QM" target="_blank">
-						<img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/s320x320/53321402_556033561562529_4522749881521012736_n.jpg?_nc_cat=107&_nc_sid=dbb9e7&_nc_ohc=T_PBMuaoTMcAX9UBVYN&_nc_ht=scontent.fcwb2-2.fna&_nc_tp=7&oh=0641ecbdfb9079fe9275c823516ad70e&oe=5EB040F2" alt="My Favorites" />
+						<img src="../../base/images/portfolios.jpg" alt="My Favorites" />
 					</a>
 				</div>
 				<div class="resource-details">
