--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -458,7 +458,7 @@
       <li>
         <a href="http://blog.caelum.com.br/comecando-a-organizar-seu-css/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/82188689_10157257044689086_791244971490410496_o.png?_nc_cat=103&_nc_sid=dbb9e7&_nc_ohc=COYakyx8OKkAX8WWpuo&_nc_ht=scontent.fcwb2-1.fna&oh=bf4cd647b9f0e8602ea02fffd4699b84&oe=5EA303D8" alt="#" />
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/82188689_10157257044689086_791244971490410496_o.png?_nc_cat=103&_nc_sid=dbb9e7&_nc_eui2=AeGK_2CB-qZFwhjcVB_VRKIIR0x_zx1JtWRHTH_PHUm1ZCcxBo2QJVxn4VvKQYvlmr53oU-WC7revFVqSYHtVW85&_nc_ohc=P9QlzhmVhfEAX9uBn1j&_nc_ht=scontent.fcwb2-1.fna&oh=01ec3700ff39271a4c474de9e5054b4f&oe=5F09D8D8" alt="#" />
           </div>
         </a>
         <div class="resource-details">
@@ -1509,6 +1509,21 @@
           <p>Cria Grids</p>
         </div>
         <a class="resource-button" href="https://cssgrid-generator.netlify.com/" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <a href="https://grid.layoutit.com/" target="_blank">
+          <div class="resource-icon"> 
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://grid.layoutit.com/" target="_blank">layoutit!</a>
+          </h2>
+          <p>Leniolab</p>
+        </div>
+        <a class="resource-button" href="https://grid.layoutit.com/" target="_blank">Veja</a>
       </li>
 
       <li>
