Vue Grid Generator

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1542,6 +1542,21 @@
       </li>
 
       <li>
+        <a href="https://vue-grid-generator.netlify.app/" target="_blank">
+          <div class="resource-icon"> 
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://vue-grid-generator.netlify.app/" target="_blank">Griddy</a>
+          </h2>
+          <p>Learn the CSS Grid</p>
+        </div>
+        <a class="resource-button" href="https://vue-grid-generator.netlify.app/" target="_blank">Veja</a>
+      </li>
+
+      <li>
         <a href="https://css-tricks.com/snippets/css/complete-guide-grid/" target="_blank">
           <div class="resource-icon">
             <img src="../../base/images/css-tricks.jpg" alt="#" />
