CSS Grid Layout Generator

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1495,6 +1495,21 @@
         </div>
         <a class="resource-button" href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/" target="_blank">Veja</a>
       </li>
+      
+      <li>
+        <a href="https://css-tricks.com/snippets/css/complete-guide-grid/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/css-tricks.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://css-tricks.com/snippets/css/complete-guide-grid/" target="_blank">CSS Tricks | Grid</a>
+          </h2>
+          <p>Guia de desenvolvimento | Games: <a href="http://cssgridgarden.com/" target="_blank"><strong style="background-color:#265973; color: white; padding: 3px;">Grid Garden</strong></a> | Guia: <a href="http://grid.malven.co/" target="_blank"><strong style="background-color:#f5d72b; color: rgb(10, 10, 10); padding: 3px;">Grid Malven</strong></a></p>
+        </div>
+        <a class="resource-button" href="https://css-tricks.com/snippets/css/complete-guide-grid/" target="_blank">Veja</a>
+      </li>
 
       <li>
         <a href="https://cssgrid-generator.netlify.com/" target="_blank">
@@ -1549,26 +1564,26 @@
         </a>
         <div class="resource-details">
           <h2>
-            <a href="https://vue-grid-generator.netlify.app/" target="_blank">Griddy</a>
+            <a href="https://vue-grid-generator.netlify.app/" target="_blank">Vue Grid Generator</a>
           </h2>
-          <p>Learn the CSS Grid</p>
+          <p>Gerador de Grid</p>
         </div>
         <a class="resource-button" href="https://vue-grid-generator.netlify.app/" target="_blank">Veja</a>
       </li>
 
       <li>
-        <a href="https://css-tricks.com/snippets/css/complete-guide-grid/" target="_blank">
-          <div class="resource-icon">
-            <img src="../../base/images/css-tricks.jpg" alt="#" />
+        <a href="https://css-grid-layout-generator.pw/" target="_blank">
+          <div class="resource-icon"> 
+            <img src="../../base/images/portfolios.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
           <h2>
-            <a href="https://css-tricks.com/snippets/css/complete-guide-grid/" target="_blank">CSS Tricks | Grid</a>
+            <a href="https://css-grid-layout-generator.pw/" target="_blank">Css Grid Layout Generator</a>
           </h2>
-          <p>Guia de desenvolvimento | Games: <a href="http://cssgridgarden.com/" target="_blank"><strong style="background-color:#265973; color: white; padding: 3px;">Grid Garden</strong></a> | Guia: <a href="http://grid.malven.co/" target="_blank"><strong style="background-color:#f5d72b; color: rgb(10, 10, 10); padding: 3px;">Grid Malven</strong></a></p>
+          <p>Gerador de Grid</p>
         </div>
-        <a class="resource-button" href="https://css-tricks.com/snippets/css/complete-guide-grid/" target="_blank">Veja</a>
+        <a class="resource-button" href="https://css-grid-layout-generator.pw/" target="_blank">Veja</a>
       </li>
 
       <li>
