Mensagem para atualizar o browser caso utilize um navegador antigo

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2430,6 +2430,21 @@
         </div>
         <a class="resource-button" href="https://github.com/cezaraugusto/You-Dont-Know-JS?fbclid=IwAR1KQKuIZBcZ-l37rMZYY4Z9f4pobfM6ix0ZQytqfpWkLka9pkPVmpSKMI8" target="_blank">Veja</a>        
       </li>
+     
+      <li>
+        <a href="https://browser-update.org/?fbclid=IwAR0Z8JeKFbjnR_O203XtOyk_u_C22bJwJZWgh1HAbtCitFDiFUsRzFozFgc" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://browser-update.org/?fbclid=IwAR0Z8JeKFbjnR_O203XtOyk_u_C22bJwJZWgh1HAbtCitFDiFUsRzFozFgc" target="_blank">Browser Update</a>
+          </h2>
+          <p>Mensagem para atualizar o browser</p>
+        </div>
+        <a class="resource-button" href="https://browser-update.org/?fbclid=IwAR0Z8JeKFbjnR_O203XtOyk_u_C22bJwJZWgh1HAbtCitFDiFUsRzFozFgc" target="_blank">Veja</a>        
+      </li>
 
       <div id="acessibilidade"></div>
 
