--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 </head>
 
-<body>
+<body oncontextmenu="return false" onselectstart="return false" ondragstart="return false">
 
 <div class="front-image"></div>
 
