--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3053,7 +3053,7 @@
       <li>
         <a href="https://www.codecademy.com" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/10540415_905110306169009_6386804842604452646_n.png?_nc_cat=105&_nc_ohc=KXu5kEwmo3sAQkon205F8bz0mgG_sbJb-LOUEqYBsSaPm7_vundMmDXLg&_nc_ht=scontent.fcwb2-1.fna&oh=c4c3c197aada738a8bd7a7efea07d40b&oe=5EA6A630" alt="#" />
+            <img src="../../base/images/portfolios.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
