Free Code Camp Logo

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3068,7 +3068,7 @@
       <li>
         <a href="https://learn.freecodecamp.org" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/12439144_1738400546393339_7527358456954625324_n.png?_nc_cat=105&_nc_sid=dbb9e7&_nc_ohc=yYrWT6VZ3RUAX8pR5tz&_nc_ht=scontent.fcwb2-1.fna&oh=7cb2601eaf04e4046f746c67428c391c&oe=5EA23B81" alt="#" />
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-9/12439144_1738400546393339_7527358456954625324_n.png?_nc_cat=105&_nc_sid=85a577&_nc_ohc=Rgtritb3W7cAX9KBYp-&_nc_ht=scontent.fcwb2-1.fna&oh=d4a23e42f76b928f7e9521b986106a73&oe=5F20220B1" alt="#" />
           </div>
         </a>
         <div class="resource-details">
