--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1939,7 +1939,7 @@
 			<li>
 				<a href="https://cursos.timtec.com.br/" target="_blank">
 					<div class="resource-icon">
-						<img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p480x480/12993353_909861422444529_6773033912990293596_n.jpg?_nc_cat=106&_nc_eui2=AeH0UZ-VFacSkm-QanrcOs1k82Ccfo2xaxMV2zsNWu9FZtdFDAXgSywCvDLSRc0O2bDKZXDquDqSEk7nv4ghtFHcCFlX8VsQD1f9l2Fnu_MPBg&_nc_ohc=15qioByyGtIAX-X7Uye&_nc_ht=scontent.fcwb2-1.fna&_nc_tp=6&oh=c7d4f53d208774ca8d026c646bf4106f&oe=5EC01FFB" alt="Cursos" />
+						<img src="https://scontent.fbfh1-2.fna.fbcdn.net/v/t1.0-1/p100x100/12993353_909861422444529_6773033912990293596_n.jpg?_nc_cat=106&_nc_sid=dbb9e7&_nc_eui2=AeGoQqBpjgaPZU8YrJFvAs5r-2Odg3Q_yCf7Y52DdD_IJzXUO5uHWyujMiYeYarpzuBzs2g_eJSvs0ljgd40Ua68&_nc_ohc=bOYqfj_bg7EAX_lC9IV&_nc_ht=scontent.fbfh1-2.fna&_nc_tp=6&oh=f3fa521e91de70a0be648568fc344639&oe=5F23BA5F" alt="Cursos" />
 					</div>
 				</a>
 				<div class="resource-details">
