Site com fotos de pessoas que não existem gerados por inteligência artificial

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -1115,7 +1115,6 @@ and share your amazing creations in a matter of minutes.</p>
         </div>
         <a class="resource-button" href="http://www.wireframeshowcase.com/" target="_blank">Veja</a>
       </li>
-      </li>
 
       <li>
         <div class="resource-icon">
@@ -1131,6 +1130,22 @@ and share your amazing creations in a matter of minutes.</p>
           <p>UX Collective</p>
         </div>
         <a class="resource-button" href="https://uxdesign.cc/how-to-improve-your-product-ui-designers-checklist-58510947e6ab" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <div class="resource-icon">
+          <a href="https://thispersondoesnotexist.com/" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://thispersondoesnotexist.com/" target="_blank">Imagens de pessoas aleatórias
+            </a>
+          </h2>
+          <p>Imagens geradas por inteligencia artificial</p>
+        </div>
+        <a class="resource-button" href="https://thispersondoesnotexist.com/" target="_blank">Veja</a>
       </li>
 
     </ul>
