Organizando página UX/UI

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -48,7 +48,7 @@
       <li>
         <a href="https://developer.apple.com/design/human-interface-guidelines/ " target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t34.0-1/p320x320/38987198_358933588097207_1944168479_n.jpg?_nc_cat=1&_nc_sid=dbb9e7&_nc_ohc=zA7_BFEblyoAX_0X9SX&_nc_ht=scontent.fcwb2-1.fna&_nc_tp=6&oh=90f9d5a7904b24cbd7abcb3e496a7755&oe=5E84BC3B" alt="#" />          
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t34.0-1/p320x320/38987198_358933588097207_1944168479_n.jpg?_nc_cat=1&_nc_sid=dbb9e7&_nc_eui2=AeHnxZLcqzmZVkSCDuX1Pez2Cle_OgAjgwgKV786ACODCKc1jBLsWLgpM4DYhHDZ0Cc1aW4ktW9flIZQvDR4PVmS&_nc_ohc=dv2EIdC85XAAX-8hIB4&_nc_ht=scontent.fcwb2-1.fna&_nc_tp=6&oh=e42457760ba1f8d31280b64134b8a28f&oe=5F03F4FB" alt="#" />          
           </div>
         </a>
         <div class="resource-details">
@@ -143,7 +143,7 @@
       <li>
         <a href="https://www.strawpoll.me/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/13307433_1115499378510722_2943287756945467912_n.png?_nc_cat=104&_nc_sid=dbb9e7&_nc_ohc=QTUj6RmjSiEAX-uGynS&_nc_ht=scontent.fcwb2-1.fna&oh=faced5564357ad9db1a7f074294d80fb&oe=5EA3A16A" alt="#" />          
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/13307433_1115499378510722_2943287756945467912_n.png?_nc_cat=104&_nc_sid=dbb9e7&_nc_eui2=AeGsRjjtWYuwNSuVqlYNg4HKsgmqs3rWxFmyCaqzetbEWe6w5CGj01gfFoTPfC_0pmSVF-zN85xaPfaqkKGGlbD-&_nc_ohc=uHoB793FpkcAX9SqfZi&_nc_ht=scontent.fcwb2-1.fna&oh=2c6212f47aea7d43f611a53f556ba6c3&oe=5F2625EA" alt="#" />          
           </div>
         </a>
         <div class="resource-details">
@@ -188,7 +188,7 @@
       <li>
         <a href="https://www.awwwards.com/websites/" target="_blank">
           <div class="resource-icon"> 
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/70159572_2336338326402579_784557711705505792_n.png?_nc_cat=100&_nc_ohc=or4XXpQiTuwAQmc75beTa6HtNZcpGpaeHClz0O6r14Z9H43j87yXuIR0g&_nc_ht=scontent.fcwb2-2.fna&oh=952c6090144906ed5827aa87905b8f6a&oe=5EB3A267" alt="#" />          
+            <img src="../../base/images/portfolios.jpg" alt="#" />          
           </div>
         </a>
         <div class="resource-details">
