--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -203,7 +203,7 @@
       <li>
         <a href="https://zeplin.io/" target="_blank">
           <div class="resource-icon">          
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t31.0-1/p320x320/1911142_417326238477451_4522575293430406773_o.png?_nc_cat=104&_nc_sid=dbb9e7&_nc_ohc=Go4plt3AkJEAX_MvHyS&_nc_ht=scontent.fcwb2-1.fna&oh=432169e77a5769ab66e1c971b05b3f4d&oe=5EA22333" alt="#" />          
+            <img src="../../base/images/portfolios.jpg" alt="#" />          
           </div>
         </a>
         <div class="resource-details">
