--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2824,7 +2824,22 @@
           </h2>
           <p>SEJA UM PROFISSIONAL DIGITAL DO FUTURO</p>
         </div>
-        <a class="resource-button" href="https://digitalinnovation.one/" target="_blank">Veja</a> 
+        <a class="resource-button" href="https://digitalinnovation.one/" target="_blank">Veja</a>           
+      </li>
+
+      <li>
+        <a href="https://loiane.training/cursos" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://loiane.training/cursos" target="_blank">Loiane Training</a>
+          </h2>
+          <p>Angular; Java orientado a objetos; Estrutura de dados e algoritmos em Java; Java Intermediário; Phonegap/Cordova; Ext JS 4</p>
+        </div>
+        <a class="resource-button" href="https://loiane.training/cursos" target="_blank">Veja</a> 
         <div id="tutoriais"></div>   
       </li>
 
