Ajuste Interneting is Hard

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3113,7 +3113,7 @@
       <li>
         <a href="https://internetingishard.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/16807113_120889711764178_8620030254919588607_n.png?_nc_cat=105&_nc_sid=dbb9e7&_nc_ohc=gjbdVSsunwgAX-Py50e&_nc_ht=scontent.fcwb2-1.fna&oh=0e019130dca908b553d7c1fdd720dcaa&oe=5EA3FE46" alt="#" />
+            <img src="../../base/images/portfolios.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
