--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3128,7 +3128,7 @@
       <li>
         <a href="http://www.codenation.com.br/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/54417706_637404076673530_6620788057828229120_n.png?_nc_cat=106&_nc_ohc=GUy9R7xAlEEAQnsC0E3pOnZXBdALb-P5YNQFxISq7bihmoMovaud3PKuQ&_nc_ht=scontent.fcwb2-1.fna&oh=3b0eb6148b928b6c4bfc0bd3c4f8e6b4&oe=5E86A044" alt="#" />
+            <img src="../../base/images/portfolios.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
