--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2445,6 +2445,21 @@
         </div>
         <a class="resource-button" href="https://browser-update.org/?fbclid=IwAR0Z8JeKFbjnR_O203XtOyk_u_C22bJwJZWgh1HAbtCitFDiFUsRzFozFgc" target="_blank">Veja</a>        
       </li>
+     
+      <li>
+        <a href="https://undraw.co/illustrations" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://undraw.co/illustrations" target="_blank">unDraw</a>
+          </h2>
+          <p>Illustrations</p>
+        </div>
+        <a class="resource-button" href="https://undraw.co/illustrations" target="_blank">Veja</a>        
+      </li>
 
       <div id="acessibilidade"></div>
 
