Jonathan Harrell Blog

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2804,7 +2804,22 @@
           </h2>
           <p>Blogs</p>
         </div>
-        <a class="resource-button" href="https://cssauthor.com/" target="_blank">Veja</a>
+        <a class="resource-button" href="https://cssauthor.com/" target="_blank">Veja</a>        
+      </li>
+
+      <li>
+        <a href="https://www.jonathan-harrell.com/blog/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.jonathan-harrell.com/blog/" target="_blank">Css Author</a>
+          </h2>
+          <p>Blogs</p>
+        </div>
+        <a class="resource-button" href="https://www.jonathan-harrell.com/blog/" target="_blank">Veja</a>
         <div id="cursos"></div>   
       </li>
 
