--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -333,7 +333,7 @@
 
 			<li>
 				<div class="resource-icon">
-					<a href="ttp://www.cufonfonts.com/font/bariol-regular-2" target="_blank">
+					<a href="http://www.cufonfonts.com/font/bariol-regular-2" target="_blank">
 						<img src="../../base/images/portfolios.jpg" alt="Canva Fonts Combinations" />
 					</a>
 				</div>
@@ -342,6 +342,19 @@
 					<p>Web fonts &amp; e download</p>
 				</div>
 				<a class="resource-button" href="http://www.cufonfonts.com/font/bariol-regular-2" target="_blank">Veja</a>
+			</li>
+
+			<li>
+				<div class="resource-icon">
+					<a href="https://fontmeme.com/" target="_blank">
+						<img src="../../base/images/portfolios.jpg" alt="Font Meme" />
+					</a>
+				</div>
+				<div class="resource-details">
+					<h2> <a href="https://fontmeme.com/" target="_blank">Font Meme</a> </h2>
+					<p>Criar logo baseado nas existentes - descrição de Logos</p>
+				</div>
+				<a class="resource-button" href="https://fontmeme.com/" target="_blank">Veja</a>
 			</li>
 
 			<li>
