--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -596,6 +596,39 @@
         <div id="bibliotecas"></div>
       </li>
 
+      <div class="linha"></div>        
+      <h2 class="margen-titulo color-frontend">Estrutura CSS</h2>
+      <div class="linha"></div>
+      
+      <li>
+        <a href="https://www.xfive.co/blog/itcss-scalable-maintainable-css-architecture/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/itcss.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.xfive.co/blog/itcss-scalable-maintainable-css-architecture/" target="_blank">ITCSS</a>
+          </h2>
+          <p>Scalable and Maintainable CSS Architecture</p>
+        </div>
+        <a class="resource-button" href="https://www.xfive.co/blog/itcss-scalable-maintainable-css-architecture/" target="_blank">Veja</a>        
+      </li>
+      
+      <li>
+        <a href="https://bradfrost.com/blog/post/atomic-web-design/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/atomic-design.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://bradfrost.com/blog/post/atomic-web-design/" target="_blank">Atomic Design</a>
+          </h2>
+          <p>We’re not designing pages, we’re designing systems of components.—Stephen Hay</p>
+        </div>
+        <a class="resource-button" href="https://bradfrost.com/blog/post/atomic-web-design/" target="_blank">Veja</a>        
+      </li>
 
       <div class="linha"></div>        
       <h2 class="margen-titulo color-frontend">Bibliotecas</h2>
