Logo react atualizada

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -560,7 +560,7 @@
           <h2>
             <a href="https://www.keycdn.com/blog/oocss" target="_blank">OOCSS</a>
           </h2>
-          <p>Object Oriented CSS | Doc Alternativa <mark><a href="http://oocss.org/" target="_blank">OOCSS</a></mark></p>
+          <p>Object Oriented CSS | <mark><a href="http://oocss.org/" target="_blank"> Doc Alternativa OOCSS</a></mark> | <mark><a href="https://github.com/stubbornella/oocss/wiki" target="_blank">Wiki no github</a></mark></p>
         </div>
         <a class="resource-button" href="https://www.keycdn.com/blog/oocss" target="_blank">Veja</a>        
       </li>
@@ -899,7 +899,7 @@
       <li>
         <a href="https://reactjs.org/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/1010076_477783955633350_1900224762_n.png?_nc_cat=109&_nc_sid=dbb9e7&_nc_eui2=AeEDgKuBFiNlI7AfQnApA8WAFf0Gj2cEtoUV_QaPZwS2haw5Ukr2OJONuSNdhGYpNK1OwaIg2wvbD224q13X5a6p&_nc_ohc=bd-olf55ts0AX9gbUo8&_nc_ht=scontent.fcwb2-2.fna&oh=a7b1bbed9b5fd61371c16ed22f4f1c9c&oe=5F197E8B" alt="#" />
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/1010076_477783955633350_1900224762_n.png?_nc_cat=109&_nc_sid=dbb9e7&_nc_ohc=Nx_hugYuUVAAX8aho9Z&_nc_ht=scontent.fcwb2-2.fna&oh=3bfa65da4ea569b1ebdbb877a0b545fa&oe=5F45000B" alt="#" />
           </div>
         </a>
         <div class="resource-details">
