Stack Blitz - Code the Future. In Your Browser. Create, edit & deploy fullstack apps — in just one click.

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -384,10 +384,8 @@
           </h2>
           <p>Cria imagem do texto</p>
         </div>
-        <a class="resource-button" href="https://onlinetexttools.com/" target="_blank">Veja</a>
-        <div id="css"></div>
-      </li> 
-      </li> 
+        <a class="resource-button" href="https://onlinetexttools.com/" target="_blank">Veja</a>        
+      </li>       
 
       <li>
         <a href="https://realfavicongenerator.net/" target="_blank">
@@ -401,7 +399,22 @@
           </h2>
           <p>Favicon Checker</p>
         </div>
-        <a class="resource-button" href="https://realfavicongenerator.net/" target="_blank">Veja</a>
+        <a class="resource-button" href="https://realfavicongenerator.net/" target="_blank">Veja</a>        
+      </li> 
+
+      <li>
+        <a href="https://stackblitz.com/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://stackblitz.com/" target="_blank">Stack Blitz</a>
+          </h2>
+          <p>Editor Online é possível logar pelo github e salvar o que foi feito</p>
+        </div>
+        <a class="resource-button" href="https://stackblitz.com/" target="_blank">Veja</a>
         <div id="css"></div>
       </li> 
 
