Awesome Javascript and Awesome React collection

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1018,7 +1018,37 @@
           </h2>
           <p>Visual primitives for the component age</p>
         </div>
-        <a class="resource-button" href="https://styled-components.com/" target="_blank">Veja</a>     
+        <a class="resource-button" href="https://styled-components.com/" target="_blank">Veja</a>             
+      </li>   
+
+      <li>
+        <a href="https://github.com/sorrycc/awesome-javascript" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://github.com/sorrycc/awesome-javascript" target="_blank">Awesome JavaScript</a>
+          </h2>
+          <p>A collection of awesome browser-side JavaScript libraries, resources and shiny things.</p>
+        </div>
+        <a class="resource-button" href="https://github.com/sorrycc/awesome-javascript" target="_blank">Veja</a>             
+      </li>   
+
+      <li>
+        <a href="https://github.com/enaqx/awesome-react" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://github.com/enaqx/awesome-react" target="_blank">Awesome React</a>
+          </h2>
+          <p>Uma coleção de coisas impressionantes sobre o ecossistema React</p>
+        </div>
+        <a class="resource-button" href="https://github.com/enaqx/awesome-react" target="_blank">Veja</a>     
         <div id="animacoes"></div>   
       </li>   
 
@@ -3870,7 +3900,7 @@
       <li><a class="scroll" href="#arquiteturascss">Arquiteturas de CSS</a></li>
       <li><a class="scroll" href="#bibliotecas">Bibliotecas</a></li>      
       <li><a class="scroll" href="#bibliotecas-js">Bibliotecas JS</a></li>      
-      <li><a class="scroll" href="#react">Bibliotecas JS</a></li>      
+      <li><a class="scroll" href="#react">React</a></li>      
       <li><a class="scroll" href="#animacoes">Animações</a></li>
       <li><a class="scroll" href="#zoom">Zoom | Popup</a></li> 
       <li><a class="scroll" href="#icones">Ícones</a></li>      
