--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1516,7 +1516,7 @@
       <li>
         <a href="https://pages.github.com/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/github-pages.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
@@ -1529,54 +1529,39 @@
       </li>  
 
       <li>
-        <a href="https://pages.github.com/" target="_blank">
+        <a href="https://www.netlify.com/" target="_blank">
           <div class="resource-icon">
             <img src="https://avatars0.githubusercontent.com/u/7892489?s=200&v=4" alt="#" />
           </div>
         </a>
         <div class="resource-details">
           <h2>
-            <a href="https://pages.github.com/" target="_blank">Netlify</a>
+            <a href="https://www.netlify.com/" target="_blank">Netlify</a>
           </h2>
-          <p>Hospedagem Free através de repositório no Github | Gitlab | Bitbucket com leitura e controle a partir do Netlify</p>
+          <p>Leitura através de repositório no Github | Gitlab | Bitbucket com leitura e controle a partir do Netlify</p>
         </div>
-        <a class="resource-button" href="https://pages.github.com/" target="_blank">Veja</a>
+        <a class="resource-button" href="https://www.netlify.com/" target="_blank">Veja</a>
       </li>  
 
       <li>
-        <a href="https://pages.github.com/" target="_blank">
+        <a href="https://vercel.com/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/vercel.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
           <h2>
-            <a href="https://pages.github.com/" target="_blank">Infinity Free</a>
+            <a href="https://vercel.com/" target="_blank">Vercel</a>
           </h2>
-          <p>Free Unlimited Web Hosting</p>
+          <p>Leitura através de repositório no Github | Gitlab | Bitbucket com leitura e controle a partir do Vercel</p>
         </div>
-        <a class="resource-button" href="https://pages.github.com/" target="_blank">Veja</a>
+        <a class="resource-button" href="https://vercel.com/" target="_blank">Veja</a>
       </li>  
-
-      <li>
-        <a href="https://zeit.co/now" target="_blank">
-          <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
-          </div>
-        </a>
-        <div class="resource-details">
-          <h2>
-            <a href="https://zeit.co/now" target="_blank">Now</a>
-          </h2>
-          <p>Global Serveless Deployments</p>
-        </div>
-        <a class="resource-button" href="https://zeit.co/now" target="_blank">Veja</a>
-      </li>  
-
+      
       <li>
         <a href="https://www.heroku.com/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/heroku.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
@@ -1586,7 +1571,21 @@
           <p>Voltado a apps e sites dinâmicos</p>
         </div>
         <a class="resource-button" href="https://www.heroku.com/" target="_blank">Veja</a>
-        <div id="bancos"></div>
+      </li>  
+
+      <li>
+        <a href="https://infinityfree.net/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/infinity-free.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://infinityfree.net/" target="_blank">Infinity Free</a>
+          </h2>
+          <p>Free Unlimited Web Hosting</p>
+        </div>
+        <a class="resource-button" href="https://infinityfree.net/" target="_blank">Veja</a>
       </li>  
 
       <div class="linha"></div>
