Atualização secton pre-processadores

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1481,7 +1481,7 @@
       <li>
         <a href="https://sass-lang.com/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/sass.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
@@ -1496,7 +1496,7 @@
       <li>
         <a href="http://lesscss.org/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/less.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
