Beeceptor - Rest API mocking and intercepting in seconds

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1572,6 +1572,22 @@
         </div>
         <a class="resource-button" href="https://www.heroku.com/" target="_blank">Veja</a>
       </li>  
+      
+      <li>
+        <a href="https://beeceptor.com/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/heroku.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://beeceptor.com/" target="_blank">Beeceptor</a>
+          </h2>
+          <p>
+            Rest API mocking and intercepting in seconds.</p>
+        </div>
+        <a class="resource-button" href="https://beeceptor.com/" target="_blank">Veja</a>
+      </li>  
 
       <li>
         <a href="https://infinityfree.net/" target="_blank">
