--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -57,6 +57,21 @@
       </li>
 
       <li>
+        <a href="http://www.favicon.pro/pt/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/4devs.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="http://www.favicon.pro/pt/" target="_blank">Favicon.pro</a>
+          </h2>
+          <p>Gerador de Favicon></p>
+        </div>
+        <a class="resource-button" href="http://www.favicon.pro/pt/" target="_blank">Veja</a>
+      </li>
+
+      <li>
         <a href="https://snag.gy/" target="_blank">
           <div class="resource-icon">
             <img src="../../base/images/snaggy.jpg" alt="#" />
