Pixi JS - The HTML 5 Creation Engine

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1248,8 +1248,7 @@
           </h2>
           <p>A beautiful, responsive, customizable, accessible (WAI-ARIA) replacement for JavaScript's popup boxes</p>
         </div>
-        <a class="resource-button" href="https://sweetalert2.github.io/" target="_blank">Veja</a>
-        <div id="zoom"></div>
+        <a class="resource-button" href="https://sweetalert2.github.io/" target="_blank">Veja</a>        
       </li>  
 
       <li>
@@ -1264,8 +1263,22 @@
           </h2>
           <p>Free Paralax Features Using Vanilla JavaScript</p>
         </div>
-        <a class="resource-button" href="https://dixonandmoe.com/rellax/" target="_blank">Veja</a>
-        <div id="zoom"></div>
+        <a class="resource-button" href="https://dixonandmoe.com/rellax/" target="_blank">Veja</a>        
+      </li>  
+
+      <li>
+        <a href="https://www.pixijs.com/?fbclid=IwAR1oJmqahhBsXzFZXpPPMyAYDOWzeq8sDFqBMZBtfvzNPRjwxaw4Bn_qzZc" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.pixijs.com/?fbclid=IwAR1oJmqahhBsXzFZXpPPMyAYDOWzeq8sDFqBMZBtfvzNPRjwxaw4Bn_qzZc" target="_blank">PixiJS v5</a>
+          </h2>
+          <p>The HTML 5 Creation Engine</p>
+        </div>
+        <a class="resource-button" href="https://www.pixijs.com/?fbclid=IwAR1oJmqahhBsXzFZXpPPMyAYDOWzeq8sDFqBMZBtfvzNPRjwxaw4Bn_qzZc" target="_blank">Veja</a>        
       </li>  
 
       <li>
