Favicon pro add logo

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -59,14 +59,14 @@
       <li>
         <a href="http://www.favicon.pro/pt/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/4devs.jpg" alt="#" />
+            <img src="../../base/images/favicon.pro.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
           <h2>
             <a href="http://www.favicon.pro/pt/" target="_blank">Favicon.pro</a>
           </h2>
-          <p>Gerador de Favicon></p>
+          <p>Gerador de Favicon</p>
         </div>
         <a class="resource-button" href="http://www.favicon.pro/pt/" target="_blank">Veja</a>
       </li>
