Chakra a design system

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1087,6 +1087,22 @@
         <div id="animacoes"></div>   
       </li>   
 
+      <li>
+        <a href="https://chakra-ui.com/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/chakraui.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://chakra-ui.com/" target="_blank">Chakra UI</a>
+          </h2>
+          <p>Design System</p>
+        </div>
+        <a class="resource-button" href="https://chakra-ui.com/" target="_blank">Veja</a>     
+        <div id="animacoes"></div>   
+      </li>   
+
       <div class="linha"></div>        
       <h2 class="margen-titulo color-frontend">Animações</h2>
       <div class="linha"></div>      
