Criando nova link para adicionar depois

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -40,6 +40,21 @@
         </div>
         <a class="resource-button" href="https://placeholder.com/" target="_blank">Veja</a>
       </li>  
+       
+      <li>
+        <a href="https://placeholder.com/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/placehold.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://placeholder.com/" target="_blank">placeholder.com</a>
+          </h2>
+          <p>Imagens para prótipos; outra alternativa é o <a href="https://dummyimage.com/" target="_blank"><mark>Dynamic Dummy Image</mark></a></p>
+        </div>
+        <a class="resource-button" href="https://placeholder.com/" target="_blank">Veja</a>
+      </li>  
 
       <li>
         <a href="https://www.4devs.com.br/gerador_de_texto_lorem_ipsum" target="_blank">
