--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -145,7 +145,6 @@
         </div>
         <a class="resource-button" href="http://duoload.verou.me/" target="_blank">Veja</a>
       </li>
-
        
       <li>
         <a href="https://www.browserstack.com/" target="_blank">
@@ -612,7 +611,7 @@
       <li>
         <a href="http://blog.caelum.com.br/comecando-a-organizar-seu-css/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/82188689_10157257044689086_791244971490410496_o.png?_nc_cat=103&_nc_sid=dbb9e7&_nc_ohc=5exDvh4GSWoAX_a3Gpj&_nc_ht=scontent.fcwb2-1.fna&oh=21a48facd8644ed52d360109bd9f936d&oe=5F452C58" alt="#" />
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p148x148/82188689_10157257044689086_791244971490410496_o.png?_nc_cat=103&_nc_sid=1eb0c7&_nc_ohc=WrTojhY9wBIAX-zpuAt&_nc_ht=scontent.fcwb2-1.fna&oh=ed22be0efbc226fcc4350049235f60f9&oe=5F7B2D21" alt="#" />
           </div>
         </a>
         <div class="resource-details">
